<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="app_name">MyHealth</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_change_language">Change language</string>
    
    <!-- Dialog Messages -->
    <string name="view_local_or_online_measurements">Do you want to view local or online measurements?</string>
	<string name="delete_confirmation">Are you sure you want to delete this measurement?</string>
    
    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="created_by">Created by:</string>
    <string name="creators">- Dustin Meijer\n- Erik Poolman\n- Erik Slim\n- Jeroen Stoker\n- Cristian Halman\n- Herman Ostendorf</string>

    <!-- Titles -->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_home">MyHealth Home</string>
    <string name="title_activity_view_measurements_online">Online Measurements</string>

    <!-- Button Texts -->
    <string name="button_text_take_measurement">Take Measurement</string>
    <string name="button_text_view_measurements">View Measurements</string>
    <string name="button_text_manage_bluetooth_devices">Manage Bluetooth Devices</string>
    <string name="button_text_choose_language">Choose Language</string>
    <string name="button_text_discover_bt">Find new device</string>
    <string name="button_text_option_online">Online</string>
    <string name="button_text_option_local">Local</string>
    <string name="button_text_yes">Yes</string>
    <string name="button_text_no">No</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_take_picture">TakePictureActivity</string>
    <string name="take_measurement">Take Measurement</string>
    <string name="view_measurements">View Measurements</string>
    <string name="manage_bluetooth_devices">Manage Bluetooth Devices</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_language">Choose Language</string>
    <string name="title_activity_view_measurements">ViewMeasurementsActivity</string>
    <string name="blocked_from_app">You have been blocked from the application!</string>
    <string name="title_activity_view_pulse_measurements">ViewPulseMeasurementsActivity</string>
    <string name="title_activity_view_ecgmeasurements">ViewECGMeasurementsActivity</string>
    <string name="title_activity_view_pressure_measurements">ViewPressureMeasurementsActivity</string>

    <!-- Strings related to tabs -->
    <string name = "indicator_viewPulseMeasurements">Pulse</string>
    <string name = "indicator_viewPressureMeasurements">Pressure</string>
    <string name = "indicator_viewECGMeasurements">ECG</string>
    
    <!-- Error messages -->
    <string name="delete_error">Could not be deleted</string>
    
</resources>