<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
        
		    <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="logout"
                android:text="@string/logout" />
		    
		    <Button
		        android:id="@+id/button_take_measurement"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/take_measurement" />
		
		    <Button
		        android:id="@+id/button_view_measurements"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/view_measurements" />
		    
		    <Button
		        android:id="@+id/button_manage_bluetooth_devices"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="manageBluetooth"
		        android:text="@string/manage_bluetooth_devices" />
		
		    <Button
		        android:id="@+id/button_take_picture"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="takePicture"
		        android:text="@string/take_picture" />
		
	</LinearLayout>

</ScrollView>