<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <Button
        android:id="@+id/button_take_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text_take_measurement" />

    <Button
        android:id="@+id/button_manage_bluetooth_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_view_measurements"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text_manage_bluetooth_devices" />

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_manage_bluetooth_devices"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text_take_picture" />

    <Button
        android:id="@+id/button_choose_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_take_picture"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text_choose_language" />

    <Button
        android:id="@+id/button_view_measurements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_take_measurement"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text_view_measurements" />

</RelativeLayout>
